--- a/Inhalt/04_Inhalt/0100_introduction.tex
+++ b/Inhalt/04_Inhalt/0100_introduction.tex
@@ -1,26 +1,26 @@
 \chapter{Introduction}
 \section{Motivation}
-Modern enterprise infrastructure for software development often makes use of cloud computing to dynamically adapt infrastructure to the fast-paced world of agile development.
-The setup process of a so-called cluster is traditionally done by hand and can easily require multiple days of work to complete.
+Modern enterprise infrastructure for software development often makes use of cloud service offerings to dynamically adapt infrastructure to the fast-paced world of agile development.
+The setup process of some cloud service offerings at SAP is traditionally done by hand and can easily require multiple days of work to complete.
 Obviously, in consequence of the required man-hours, this manual deployment is rather costly and time-consuming.
 Also, humans are prune to error.
 In a manual task that big, it is very likely for unforeseeable errors to occur.
 Finding these mistakes can eventually take additional time.
 
-As a conclusion, it is desired to automate as much of a cluster's deployment process as possible.
-There are already various tools available that can be leveraged to perform an automated deployment of a declared cluster infrastructure.
+As a conclusion, it is desirable to automate as much of a cloud service's deployment process as possible.
+There are already various tools available that can be leveraged to perform an automated deployment of a declared infrastructure.
 But even these automatization tools require some perquisites to run, like a technical access user with permissions to access the necessary resources and access keys to utilize this user, which still have to be created manually or with the help of bare-bones scripts.
-The process of fulfilling these requirements is referred to as bootstrap.
+The process of fulfilling these requirements and preparing the involved services for automated deployment is referred to as bootstrap.
 
 \section{Goal}
-Goal of this project is to simplify the bootstrap of a cluster by integrating the necessary functionality into a \acf{cli} which is currently developed by the supervising department.
+Goal of this project is to simplify the bootstrap by integrating the necessary functionality into a \acf{cli} which is currently developed by the supervising department.
 Also, the usage should be convenient and, beside providing login data for the cloud provider and credential store, minimal user input should be required to perform the bootstrap.
 Furthermore, the newly developed \ac{cli} is required to be able to get executed by an automated build server.
 The ways of user interaction have to be designed accordingly.
 
 \section{Approach}
-First, the fundamentals of tools and services that are related to the work are introduced.
-Most of these tools are fixed because of the current working set of the supervising department and because the target services that have to be interacted with are clearly defined.
+First, fundamentals of tools and services that are related to the work are introduced.
+Most of these tools are fixed because of the current working set of the supervising department and because the target services, that have to be interacted with, are clearly defined.
 Although, some conceptional thoughts have to be put into the appropriate choice of libraries and \acp{api} that are used as a bridge between the programming language and the actual remote services.
 As an orientation for the bootstrapping procedure, an existing Python script will be leveraged.
 This script is checked for possible improvements and modernization potential.
