--- a/Inhalt/04_Inhalt/0200_fundamentals.tex
+++ b/Inhalt/04_Inhalt/0200_fundamentals.tex
@@ -2,7 +2,7 @@
 \section{Go}
 Go (also known as Golang) is an open source programming language that was started at Google in 2007 and initially launched in 2009.
 The language was designed to face engineering challenges at Google with the goal to make it \enquote{easy to build simple, reliable and efficient software}. \cite{pike.2020, golang.github}
-By now the compiled and statically typed language \cite{chris.2021} is widely used and the way it approaches network concurrency and software engineering has influenced other languages to a noticeable extent. \cite{pike.2020}
+By now, the compiled and statically typed language \cite{chris.2021} is widely used and the way it approaches network concurrency and software engineering has influenced other languages to a noticeable extent. \cite{pike.2020}
 Through its structure go supports programming on various levels of abstraction.
 For instance, one can embed Assembler or C code into a Go program or on the other hand combine groups of components into bigger, more complex components to realize abstract design patterns. \cite{Maurer2021}
 Nowadays, Go is a popular choice for everything related to DevOps and therefor also for the development of command line tools. \cite{mike.2020}
