pruned the wording 'cluster' mostly

--- a/Inhalt/04_Inhalt/0600_evaulation.tex
+++ b/Inhalt/04_Inhalt/0600_evaulation.tex
@@ -1,5 +1,5 @@
 \chapter{Evaluation}
-In the course of this project, a working prototype of the bootstrapping process required for automated cluster deployment via Terraform was successfully implemented in an existing Go project.
+In the course of this project, a working prototype of the bootstrapping process required for automated deployment of cloud service offerings via Terraform was successfully implemented in an existing Go project.
 The scope was momentarily restricted to support \ac{aws} only.
 It was discussed what means should be chosen for interacting with third party services.
 The official \ac{aws} Go \ac{sdk} and the Vault \ac{http} \ac{api} were found to be the appropriate choices in the context of this project.
