--- a/Inhalt/04_Inhalt/0300_concept.tex
+++ b/Inhalt/04_Inhalt/0300_concept.tex
@@ -35,7 +35,7 @@ But using the \ac{cli} would imply multiple drawbacks.
 \acp{cli} often do not have a stable human interface and therefore the output returned by the \ac{cli} is subject to change.
 This is no good if the program has to parse the output and behave according to the results because the program could break easily and unnoticed just by updating the \ac{cli}.
 Although, in the special case of the \ac{aws} \ac{cli} the user can choose between several output formats including \ac{json} notation, so a changing interface probably would not be of a problem.
-What is more of a concern is the fact that the \ac{cli} containing the bootstrap should be part of a container image packing various tools to work with clusters.
+What is more of a concern is the fact that the \ac{cli} containing the bootstrap should be part of a container image packing various tools to work with cloud service offerings.
 The \ac{aws} \ac{cli} is entirely written in Python.
 If the \ac{aws} \ac{cli} should be used, Python would have to be installed into this container as well noticeably increasing the resulting image size.
 Also, when run locally, the Go application would have to rely on an existing installation of the \ac{aws} \ac{cli} to function correctly or check for its existence and prompt the user to satisfy the dependency manually in case it is missing.
@@ -94,5 +94,5 @@ The policy created in the bootstrap will only be used for the terraform user.
 Therefore, theoretically it would be the proper way to go to use an inline policy so that the list of other policies does not get cluttered unnecessarily.
 Although, different size limits apply to the different policy types.
 The total size of all inline policies that can be attached to a user must not exceed 2048 bytes.
-Because the cluster name is used multiple times in the policy, if you do the calculation, it becomes clear that the usage of inline policies would entail harsh length limits on the cluster name that would not be reasonable.
+Because the service offering's name is used multiple times in the policy, if you do the calculation, it becomes clear that the usage of inline policies would entail harsh length limits on the service name that would not be reasonable.
 Therefore, managed policies will be used even though the management has a bigger overhead.
