--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -68,8 +68,8 @@
     % ------ Erklärung, Sperrvermerk, Abstact
     \include{Inhalt/01_Standard/erklaerung}
     \include{Inhalt/01_Standard/sperrvermerk}
-    \include{Inhalt/02_Abstract/abstract-de}
     \include{Inhalt/02_Abstract/abstract-en}
+    \include{Inhalt/02_Abstract/abstract-de}
 \end{otherlanguage}
 
 % ------ Inhaltsverzeichnis
@@ -110,7 +110,7 @@
 \pagestyle{plain}
 \pagenumbering{Roman}                   % Römische Seitenzahlen
 \setcounter{page}{\numexpr\value{savepage}+1}
-\printbibliography[title=Literaturverzeichnis]
+\printbibliography[title=Bibliography]
 
 % ---- Anhang
 \appendix
