--- a/Inhalt/02_Abstract/abstract-en.tex
+++ b/Inhalt/02_Abstract/abstract-en.tex
@@ -12,12 +12,13 @@
 % LTeX: language=en-US
 
 Large scale cloud service offerings are an important part of modern enterprise infrastructure.
-The deployment of these is traditionally done by hand, requiring days of work and therefore also being costly.
-The supervising department works on automizing this deployment process and related maintenance tasks with the aim to provide the interaction functionality as a self-contained \ac{cli}.
+The deployment of these is traditionally done manually, which is very time-consuming and therefore costly.
+The department, supervising this report, works on automizing this deployment process and related maintenance tasks with the aim to provide the interaction functionality as a self-contained \ac{cli}.
 
 \vspace{0.25cm}
 
-Still, the tools that are used to perform the automated deployment are not able to run without some perquisites being fulfilled.
+The tools that are used to perform the automated deployment are not able to run without some prerequisites being fulfilled.
+Therefore, the target environment needs to be prepared in a bootstrap.
 In this project, the existing bootstrapping procedure is analyzed, redesigned and implemented to be integrated into the developed \ac{cli}.
 Different approaches for interacting with involved services are introduced and compared.
 Then, a prototype of the bootstrap is implemented in Go.
