--- a/Inhalt/04_Inhalt/0100_introduction.tex
+++ b/Inhalt/04_Inhalt/0100_introduction.tex
@@ -9,23 +9,23 @@ Finding these mistakes can eventually take additional time.
 
 As a conclusion, it is desirable to automate as much of a cloud service's deployment process as possible.
 There are already various tools available that can be leveraged to perform an automated deployment of a declared infrastructure.
-But even these automatization tools require some perquisites to run, like a technical access user with permissions to access the necessary resources and access keys to utilize this user, which still have to be created manually or with the help of bare-bones scripts.
+But even these automatization tools require some prerequisites to run, like a technical access user with permissions to access the necessary resources and access keys to utilize this user, which still have to be created manually or with the help of bare-bones scripts.
 The process of fulfilling these requirements and preparing the involved services for automated deployment is referred to as bootstrap.
 
 \section{Goal}
 Goal of this project is to simplify the bootstrap by integrating the necessary functionality into a \acf{cli} which is currently developed by the supervising department.
-Also, the usage should be convenient and, beside providing login data for the cloud provider and credential store, minimal user input should be required to perform the bootstrap.
+Also, the usage should be convenient and, beside providing login data for the cloud provider and credential store, minimal user interaction should be required to perform the bootstrap.
 Furthermore, the newly developed \ac{cli} is required to be able to get executed by an automated build server.
 The ways of user interaction have to be designed accordingly.
 
 \section{Approach}
 First, fundamentals of tools and services that are related to the work are introduced.
-Most of these tools are fixed because of the current working set of the supervising department and because the target services, that have to be interacted with, are clearly defined.
+Most of these tools are predetermined by the current working set of the supervising department and because the target services, that have to be interacted with, are clearly defined.
 Although, some conceptional thoughts have to be put into the appropriate choice of libraries and \acp{api} that are used as a bridge between the programming language and the actual remote services.
 As an orientation for the bootstrapping procedure, an existing Python script will be leveraged.
 This script is checked for possible improvements and modernization potential.
 The newly developed procedure is then implemented as a general proof of concept.
 
 After this, it is discussed how tests could be established to prospectively ensure the structural integrity of the developed solution.
-Then, the steps necessary to integrate the solution with the \ac{cli} are presented.
+Then, the steps necessary to integrate the solution in the \ac{cli} are presented.
 Eventually, the developed bootstrap will be analyzed regarding economical aspects and possible weak points, and a conclusion will be drawn.
