--- a/Inhalt/04_Inhalt/0300_concept.tex
+++ b/Inhalt/04_Inhalt/0300_concept.tex
@@ -11,10 +11,10 @@ When it comes to \ac{aws}, there are three obvious ways that could be chosen.
 \paragraph{\acs{rest} \ac{api}}
 Practically all required \ac{aws} functions can be accessed via its \ac{http} \ac{api}.
 Since Go's standard library natively includes an \ac{http} client, utilizing this would be a very lightweight solution.
-You would just have to instantiate an \ac{http} client object in Go.
+An \ac{http} client object would have to be instantiated in Go.
 This object then already has all the required functionality to send requests to the \ac{api}.
 An \ac{api} call is made through an \ac{http} request with a specific method (GET, POST, PUT, DELETE etc.) to an \ac{api} endpoint.
-This endpoint is specific to the operation you want to perform and represented by an \ac{url}.
+This endpoint is specific to the operation, you want to perform, and represented by an \ac{url}.
 Additional parameters and input data for the operation can be specified in a key value style via \ac{url} parameters, the request header, or the request body.
 \ac{url} parameters can be generated with string replacement and then appended to the base \ac{url} for the \ac{aws} \ac{api}.
 The request body is a bit more complex to construct.
@@ -37,7 +37,7 @@ This is no good if the program has to parse the output and behave according to t
 Although, in the special case of the \ac{aws} \ac{cli} the user can choose between several output formats including \ac{json} notation, so a changing interface probably would not be of a problem.
 What is more of a concern is the fact that the \ac{cli} containing the bootstrap should be part of a container image packing various tools to work with cloud service offerings.
 The \ac{aws} \ac{cli} is entirely written in Python.
-If the \ac{aws} \ac{cli} should be used, Python would have to be installed into this container as well noticeably increasing the resulting image size.
+If the \ac{aws} \ac{cli} should be used, Python would have to be installed into this container as well, noticeably increasing the resulting image size.
 Also, when run locally, the Go application would have to rely on an existing installation of the \ac{aws} \ac{cli} to function correctly or check for its existence and prompt the user to satisfy the dependency manually in case it is missing.
 Just running the Go application executable would not be sufficient to perform the bootstrap.
 Because of these reasons, embedding the \ac{aws} \ac{cli} into the newly created Go \ac{cli} coordinating the bootstrap should be seen as a solution of last resort.
@@ -55,9 +55,9 @@ Luckily, errors are not of a big concern for this project, as near to all kinds 
 Furthermore, \acp{sdk} bring the inherent problem, that you completely rely on the provider in terms of update.
 If \ac{aws} changed their \ac{api} while not touching the \ac{sdk}, the program would stop working with no way to fix it rather than waiting for Amazon to update the rest of their codebase.
 On the other hand, since this is not a third party but an official \ac{sdk}, one could also see an advantage in it.
-Staying with the example of the changed \ac{api} and assuming that the \ac{sdk} gets updated at the same time as the \ac{api}, our codebase would simply continue to work.
+Staying with the example of the changed \ac{api} and assuming that the \ac{sdk} gets updated at the same time as the \ac{api}, the codebase would simply continue to work.
 At the same time, you would be responsible to update a program utilizing the \acs{rest} \ac{api} entirely on your own.
-As, in this case, the \ac{sdk} is released and maintained by Amazon their selves, and because of the introduced simplicity of working with an \ac{sdk} rather than the \ac{api} directly, this variant will be used in the following.
+As, in this case, the \ac{sdk} is released and maintained by Amazon itself, and because of the introduced simplicity of working with an \ac{sdk} rather than the \ac{api} directly, this variant will be used in the following.
 
 \subsection{Vault}
 The aspects and options to consider for Vault are very similar to those for \ac{aws}.
@@ -66,9 +66,10 @@ One noticeable difference here is that -- even though the \ac{sdk} is provided b
 To get some login methods running, one has to dig rather deep.
 Some functionality simply is not documented at all.
 
+
 But the by far more important points are, that the newly created \ac{cli} by the supervising department already contains some work in progress parts that interact with Vault.
 It would not make much sense to reimplement key aspects that these solutions already cover.
-Furthermore, mixing different approaches to access Vault would be bad practice as it makes things unnecessarily complex and introduced multiple points of failure for key functionality.
+Furthermore, mixing different approaches to access Vault would be bad practice as it makes things unnecessarily complex and introduce multiple points of failure for key functionality.
 Because of this, Vault's \ac{http} \ac{api} will be used in this project.
 This can be additionally reasoned with the advantages of \ac{http} \acp{api} described in the predeceasing section with the difference, that there are not many functions of Vault that need to be accessed despite reading and writing secrets.
 The programming overhead in writing these interactions manually via the \ac{http} client is pretty small.
